2009-06-26  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_daemon.c: 
	  If activation of an env doesn't work, then don't change the stored
	  value of the active_env.
	* common/nwamui_env.c: 
	  Print debug information about nwam error status.
	* daemon/status_icon.c: 
	  When recreating LOC and ENM section, clear out existing entries
	  otherwise we get multiple entries. Fixes defect#9560.
	* daemon/status_icon_tooltip.c: 
	  Ref the newly created env/ncp_widget since we are storing it as well
	  as passing to container, which (appears to) claims ownership. (was
	  causing an assertion if didn't do this)
	  Add some comments to explain the handling of updated ncp and fix
	  some minor warnings.

2009-06-26  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_pref_dialog.c, common/nwamui_ncp.c: 
	  Fix defect#9707 where the activation of the NCP wasn't being done.
	  The call to apply changes in the panel was only being done if the
	  selected_ncu was non-NULL - which it isn't if an NCU is not selected
	  in the combo box. Also, found then that activating the Automatic NCP
	  fired an exception.

2009-06-26  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.h, capplet/capplet-utils.c: 
	  Add notification to handler to added objects so that we can track
	  changes and send a row-changed event.
	* common/libnwamui.h, common/libnwamui.c: 
	  Create functions to get/set debug_mode (rather than using global
	  vars) and centralize the function to init the default log handler
	  too.
	* capplet/main.c, daemon/main.c, tests/main.c, daemon/nwam-menu.c,
	  daemon/status_icon.c: 
	  Change use of debug variable to use of nwamui_util_* debug
	  functions.
	* capplet/nwam-manager-properties.ui:
	  Fix defect#9627 where because the names of the buttons in the
	  refresh dialog weren't unique GtkBuilder wasn't "linking" them to
	  the response callback.
	* capplet/nwam_condition_vbox.c: 
	  Add cancel function to nwam_pref interface.